--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Aastha Sarkar</h1>
+            <div><a href="Aastha.Sarkar@studentambassadors.com">Aastha.Sarkar@studentambassadors.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,8 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
+                    <li><a href="https://github.com/aastha432">@github_handle</a></li>
+                    <li><a href="https://www.linkedin.com/in/aastha-sarkar-0196481b2/">@linkedin_handle</a></li>
                     <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
                 </ul>    
             </section>
@@ -31,11 +31,11 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Nitte Meenakshi Institute of Technology (Bangalore, India)
                     </h2>
-                    <h3>Major</h3>
+                    <h3>B.Tech (ECE)</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
+                        <li>GPA: 8.6</li>
                         <li>Years</li>
                     </ul>
                 </div>
